# llm-observability-platform

./: .flake8  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  package-lock.json  push_out.txt  pyrefly.toml  requirement.txt  run_nb.py  sitemap.xml
infrastructure/messaging/: .flake8  .isort.cfg  .pre-commit-config.yaml  Dockerfile  HTTPS_SETUP.md  Makefile  PERFORMANCE_REPORT.md  README.md  __init__.py  benchmark_results.json  docker-compose.yml  mypy.ini  postgresql.conf  pyproject.toml  requirements-app.txt  requirements-schema-registry.txt  requirements.txt  run_tests.sh  sdk.py  setup.py  setup_env.sh  sonar-config.json  sonar-project.properties
infrastructure/messaging/.github/workflows/: ci-cd.yml
infrastructure/messaging/activities/: transaction_activity.py
infrastructure/messaging/application/activities/: inngest_activity.py  kafka_activity.py  kafka_ui_activity.py
infrastructure/messaging/application/api/: inngest_service_api.py
infrastructure/messaging/application/clients/: base_client.py  broker_client.py  consumer_client.py  database_client.py  event_handler_client.py  producer_client.py  schema_registry_client.py
infrastructure/messaging/application/config/: settings.py
infrastructure/messaging/application/middleware/: auth_middleware.py  logging_middleware.py  sanitization_middleware.py
infrastructure/messaging/application/services/: event_validator.py  idempotency_service.py  queue_service.py
infrastructure/messaging/application/strategies/: direct_persistence_strategy.py  queue_persistence_strategy.py
infrastructure/messaging/client/: kafka_admin_client.py  kafka_consumer_client.py  kafka_consumer_group_client.py  kafka_producer_client.py  kafka_transaction_client.py
infrastructure/messaging/domain/: __init__.py
infrastructure/messaging/domain/clients/: broker_client.py  consumer_client.py  database_client.py  producer_client.py  schema_registry_client.py
infrastructure/messaging/domain/models/: schemas.py
infrastructure/messaging/domain/ports/: __init__.py  broker_port.py  consumer_port.py  count_port.py  database_port.py  event_management_port.py  event_reader_port.py  event_writer_port.py  idempotency_port.py  metrics_port.py  offset_port.py  persistence_strategy.py  producer_port.py  queue_port.py  schema_registry_port.py
infrastructure/messaging/domain/services/: __init__.py  event_handler.py  schema_aware_event_handler.py
infrastructure/messaging/examples/: high_throughput_example.py
infrastructure/messaging/infrastructure/: __init__.py
infrastructure/messaging/infrastructure/adapters/: __init__.py  async_horizontally_sharded_database_adapter.py  async_mongo_database_adapter.py  async_postgres_database_adapter.py  async_sharded_database_adapter.py  confluent_schema_registry_adapter.py  horizontally_sharded_database_adapter.py  kafka_consumer_adapter.py  kafka_producer_adapter.py  mongodb_database_adapter.py  postgres_database_adapter.py  redis_idempotency_store.py
infrastructure/messaging/infrastructure/metrics/: metrics_collector.py
infrastructure/messaging/infrastructure/queue/: in_memory_queue.py
infrastructure/messaging/infrastructure/setup/: run-kafka.sh
infrastructure/messaging/loadtests/: REALISTIC_LOAD_TEST_REPORT.md  locust_report.html  locustfile.py  report.html  run_basic_test.sh  run_realistic_test.sh  test_server.py  test_server_realistic.py
infrastructure/messaging/scripts/: build.sh  lint.sh  publish.sh  setup-hooks.sh  test.sh
infrastructure/messaging/scripts/sonar/: config_loader.sh  coverage_generator.sh  orchestrator.sh  server_manager.sh  sonar_scanner.sh
infrastructure/messaging/setup/inngest/: inngest_activity.py
infrastructure/messaging/setup/kafka/: kafka_activity.py  kafka_ui_activity.py
infrastructure/messaging/tests/: conftest.py  test_sdk.py
infrastructure/messaging/tests/activities/: test_inngest_activity.py  test_kafka_activity.py  test_kafka_ui_activity.py
infrastructure/messaging/tests/adapters/: test_confluent_schema_registry_adapter.py  test_high_throughput_kafka.py  test_mongodb_adapter.py  test_postgres_adapter.py
infrastructure/messaging/tests/api/: test_application_clients.py  test_broker_api.py  test_consumer_api.py  test_database_api.py  test_event_handler_api.py  test_inngest_service_api.py  test_producer_api.py  test_schema_registry_api.py
infrastructure/messaging/tests/integration/: test_integration.py
infrastructure/messaging/tests/performance/: test_performance.py
infrastructure/messaging/tests/ports/: test_database_port.py  test_domain_clients.py  test_schema_registry_port.py
infrastructure/messaging/tests/services/: test_event_handler.py  test_schema_aware_event_handler.py
infrastructure/messaging/tests/unit/: test_compression.py  test_partition_selector.py  test_property_based.py  test_schemas.py  test_serializers.py
infrastructure/messaging/utils/: compression.py
infrastructure/observability/distributedTraceAnalysisEngine/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  demo_traces.json  docker-compose.dev.yaml  docker-compose.yaml  otel-collector-config.yaml  sonar-config.json  sonar-project.properties  tempo.yaml  test_data.json
infrastructure/observability/distributedTraceAnalysisEngine/coverage/: cobertura.xml  cobertura_fixed.xml
infrastructure/observability/distributedTraceAnalysisEngine/docs/: API.md  API_PAGINATION.md  DEPLOYMENT.md  DOMAIN_MODELS.md  FRONTEND_KNOWLEDGE.md  README.md  (+1 more)
sdks/python/: Dockerfile  pyproject.toml
sdks/python/scripts/: build.sh  dev-install.sh  publish.sh
service/llm_ai_agents/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest_trace.txt  requirements.txt
service/llm_ai_agents/configs/: app.yaml
service/llm_ai_agents/frontend/: app.py
service/llm_ai_agents/scripts/: test_summary.py
service/llm_ai_agents/tests/: conftest.py
(+1499 files in other folders)
