[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-messaging-sdk"
version = "1.0.0"
description = "A comprehensive messaging SDK following Hexagonal Architecture for Kafka, Schema Registry, and database integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LLM Observability Platform", email = "dev@example.com"}
]
keywords = ["kafka", "messaging", "schema-registry", "hexagonal-architecture", "postgresql", "mongodb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.0.0",
    "confluent-kafka>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.0",
    "pylint>=3.0.0",
    "hypothesis>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/example/llm-messaging-sdk"
Documentation = "https://github.com/example/llm-messaging-sdk#readme"
Repository = "https://github.com/example/llm-messaging-sdk.git"
Issues = "https://github.com/example/llm-messaging-sdk/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["infrastructure*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"infrastructure.messaging" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=infrastructure/messaging --cov-report=html"
